--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Matemática na Prática</title>
 </head>
 <body>
-
+     <header class="cabeçalho"> 
+        <img class="g6" src="CAPA-STIE.png" alt= "Banner Site">
+        <ul class=cabeçalho-intem> 
+            <li class="cabeçalho-intem">Materiais</li> 
+            <li class="cabeçalho-intem">Atividades</li>
+        </ul>
 </body>
 </html>
