--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
      <header class="cabeçalho"> 
-        <img class="g6" src="CAPA-STIE.png" alt= "Banner Site">
+        <img class="g6" src="CAPA SITE.png" alt= "Banner Site">
         <ul class=cabeçalho-intem> 
             <li class="cabeçalho-intem">Materiais</li> 
             <li class="cabeçalho-intem">Atividades</li>
